--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>3.1.7</Version>
-    <AssemblyVersion>3.1.7.0</AssemblyVersion>
-    <FileVersion>3.1.7.0</FileVersion>
-    <Description>增加 上传图片生成缩微图功能</Description>
+    <Version>3.1.7.2</Version>
+    <AssemblyVersion>3.1.7.1</AssemblyVersion>
+    <FileVersion>3.1.7.1</FileVersion>
+    <Description>修复 缩微图功能 长宽为0的情况</Description>
   </PropertyGroup>
 
   <ItemGroup>
