--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>3.1.11</Version>
+    <Version>3.1.14</Version>
     <AssemblyVersion>3.1.8</AssemblyVersion>
     <FileVersion>3.1.8</FileVersion>
-    <Description>增加Model转换</Description>
+    <Description>增加GetTableByListModel 去除制定列功能</Description>
   </PropertyGroup>
 
   <ItemGroup>
