--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>3.1.9</Version>
-    <Description>升级3.1.9 还原会1.6</Description>
+    <Version>3.1.10</Version>
+    <Description>升级3.1.10 增加UserName</Description>
     <AssemblyVersion>3.1.6.0</AssemblyVersion>
     <FileVersion>3.1.6.0</FileVersion>
   </PropertyGroup>
